test/parallel/taskPar/vass/with-param.good
with-param.chpl:5: error: cannot apply a forall or task intent to a type or a param, here 'T'
