test/parallel/taskPar/vass/with-param.chpl
// Ensure the compiler produces a graceful error.

param T = "hi";

coforall Locales with (in T) {
  writeln();
}
